# azureml_onelake_sdk2

./: .env - sample  .gitignore  LICENSE  README.md  azureml_onelake_sdk.code-workspace  installed_packages.txt  package_azureml.ps1  requirements.txt  run_analysis.py  sample_installer.py  setup.cfg
azureml_sample/: README.md  analysis_install.py  forecast_trip_distance.py  requirements.txt  run_analysis.py  run_analysis_impl.py  synthetic_multi_year.csv  train_model.py
azureml_sample_install/: run_analysis_output.txt
azureml_sample_project/: README.md  forecast_trip_distance.py  predicted_trip_distance_2030.csv  requirements-min.txt  requirements.txt  run_analysis.py  train_model.py
