[metadata]
name = azureml-datalake-service-client
version = 0.1.0
description = Small utility to load a OneLake artifact into pandas
long_description = file: README.md
long_description_content_type = text/markdown
author = RangerXP
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    azure-identity
    azure-ai-ml
    azure-storage-file-datalake
    pyarrow
    pandas
    azure-cli
python_requires = >=3.8

[options.entry_points]
console_scripts =
    run-analysis = azureml_datalake_service_client.run_analysis:main
